# ChangeLog for games-board/crafty
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/crafty/ChangeLog,v 1.10 2005/04/12 04:52:14 mr_bones_ Exp $

*crafty-19.18 (12 Apr 2005)

  12 Apr 2005; Michael Sterrett <mr_bones_@gentoo.org> +crafty-19.18.ebuild:
  version bump

*crafty-19.15 (20 Jul 2004)

  20 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> +crafty-19.15.ebuild:
  version bump

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org> crafty-19.1.ebuild,
  crafty-19.12.ebuild, crafty-19.8.ebuild:
  virtual/glibc -> virtual/libc

  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> crafty-19.8.ebuild:
  Fix use invocation

*crafty-19.12 (06 Apr 2004)

  06 Apr 2004; Michael Sterrett <mr_bones_@gentoo.org> crafty-19.12.ebuild:
  version bump

*crafty-19.8 (31 Dec 2003)

  31 Dec 2003; Mike Frysinger <vapier@gentoo.org> :
  Update to 19.8 and clean up #34789.

*crafty-19.1 (25 Oct 2002)

  13 Dec 2003; Brad House <brad_mssw@gentoo.org> crafty-19.1.ebuild:
  mark stable on amd64

  25 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Update to 19.1 per #9657.

*crafty-18.15-r2 (13 Feb 2003)

  29 Jun 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*crafty-18.15-r1.ebuild (15 Jul 2002)

  30 Sep 2002; Mike Frysinger <vapier@gentoo.org> crafty-18.15-r2.ebuild :
  Updated to allow for compile on gcc3.x and i586 optimizations

*crafty-18.15-r1.ebuild (15 Jul 2002)

  07 Aug 2002; Mark Guertin <gerk@gentoo.org> crafty-18.15-r1.ebuild :
  Added ppc patch to close bug #5932 and ppc to keywords

  15 Jul 2002; J.Alberto S.L. <bass@gentoo.org> crafty-18.15-r1.ebuild :
  First relase. Ebuild submitted by Frank Eibisch <feibisch@estec.net>.