@@ -1,0 +1,1 @@
+MD5 f0cbd39ae11e2ecd6a439226c9b10b59 crafty-19.19.tar.gz 395480
