@@ -1,6 +1,11 @@
 # ChangeLog for games-board/crafty
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/crafty/ChangeLog,v 1.10 2005/04/12 04:52:14 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/crafty/ChangeLog,v 1.11 2005/05/31 18:33:39 mr_bones_ Exp $
+
+*crafty-19.19 (31 May 2005)
+
+  31 May 2005; Michael Sterrett <mr_bones_@gentoo.org> +crafty-19.19.ebuild:
+  version bump (bug #94641)
 
 *crafty-19.18 (12 Apr 2005)
 
